--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "zalando-tech-radar",
-  "version": "2024.1.0",
+  "name": "postgres-pro-techradar",
+  "version": "0.1",
   "description": "Visualizing our technology choices",
-  "homepage": "https://github.com/zalando/tech-radar#readme",
-  "repository": "https://github.com/zalando/tech-radar.git",
   "license": "MIT",
   "private": true,
   "directories": {
